tests/baselines/reference/exportAssignmentWithExports.errors.txt
exportAssignmentWithExports.ts(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== exportAssignmentWithExports.ts (1 errors) ====
    export class C { }
    class D { }
    export = D;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.